style.css
:root {
	/* Colors */
	--color-accent: rgba(119, 206, 255, 1);
	--color-action: rgba(39, 255, 164, 1);
	--color-background: rgba(255, 254, 233, 1);
	--color-gost: rgba(27, 43, 71, 0.04);
	--color-main: rgba(34, 53, 86, 1);
	--color-secondary: rgba(34, 53, 86, 0.3);
	--color-tertiary: rgba(114, 129, 155, 1);

	/* Font Sizes */
	font-size: 62.5%; /* (62.5/100) * 16px = 10px */
	--font--sizeXL: 16rem; /* 160px */
	--font--sizeL: 8rem; /* 80px */
	--font--sizeM: 3.2rem; /* 32px */
	--font--sizeS: 2rem; /* 20px */
	--font--sizeXS: 1.6rem; /* 16px */
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

body {
	background-color: var(--color-background) !important;
}

.page {
	max-width: 1200px !important;
	margin: auto;
	padding: 0 2em !important;
}

.content {
	padding: 2em 0;
}

.flex {
	display: flex;
	align-items: flex-start;
}

.horizontal {
	flex-direction: row;
	align-items: center;
}

.vertical {
	flex-direction: column;
}

.reverse {
	flex-direction: row-reverse;
}

.align-right {
	-moz-text-align-last: right; /* For Firefox prior 58.0 */
	text-align-last: right;
}

.pill {
	background-color: var(--color-gost);
	border-radius: 40px;
	padding: 1.4rem;
	margin-right: 0.8rem;
	/* width: -moz-fit-content;
	width: fit-content; */
}

.card,
.card-body {
	min-width: 14rem !important;
}

.card-body {
	padding: 1.6rem !important;
}

.description {
	height: 4rem;
	margin: 1rem 0 1.4rem;
	min-width: 12.4rem !important;
}

.details,
#daily-weather {
	justify-content: space-between;
}

.details > h4 {
	margin: 0.6rem 2rem 0.6rem 0 !important;
}

.space8 {
	margin: 0.8rem 0;
}

.space20 {
	margin: 2rem 0;
}

hr.divider {
	border-top: 1px solid !important;
	opacity: 0.1;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
span,
.navbar {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	margin-bottom: 0 !important;
	color: var(--color-main);
}

.navbar {
	padding: 2rem 0 !important;
}

.container-fluid {
	padding-left: 0 !important;
	padding-right: 0 !important;
}

.btn,
.form-control,
.card {
	border-radius: 1.6rem !important;
}

.btn,
.form-control {
	padding: 1.2rem 2rem !important;
}

.form-control,
.card {
	background-color: var(--color-gost) !important;
	border: none !important;
	color: var(--color-main) !important;
}

.btn {
	background: var(--color-action) !important;
	color: var(--color-main) !important;
}

.icons {
	fill: var(--color-secondary);
}

.icons-stroke {
	stroke: var(--color-secondary);
}

.main {
	color: var(--color-main);
}

.secondary {
	color: var(--color-secondary);
}

.tertiary {
	color: var(--color-tertiary);
}

.titleXL {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeXL) !important;
	line-height: 1em;
}

.titleL {
	font-family: Product-Sans-Bold, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeL) !important;
}

.titleM {
	font-family: Product-Sans-Bold, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeM) !important;
}

.titleS {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeS) !important;
}

.titleXS {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeXS) !important;
}

.titleXS-regular {
	font-family: Product-Sans-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeXS) !important;
}

@font-face {
	font-family: 'Product-Sans-Regular';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Regular'), url('./fonts/ProductSans-Regular.woff') format('woff');
}

@font-face {
	font-family: 'Product-Sans-Bold';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Bold'), url('./fonts/ProductSans-Bold.woff') format('woff');
}

@font-face {
	font-family: 'Product-Sans-Medium-Regular';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Medium Regular'), url('./fonts/ProductSans-Medium.woff') format('woff');
}

@font-face {
	font-family: 'Product-Sans-Black-Regular';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Black Regular'), url('./fonts/ProductSans-Black.woff') format('woff');
}

/* X-Small devices (portrait phones, less than 576px) */
/* No media query for `xs` since this is the default in Bootstrap */

/* Small devices (landscape phones, 576px and up) */
@media (max-width: 576px) {
	.page {
		margin: auto;
		padding: 0 1.2rem !important;
	}
	.content {
		padding: 2rem 0;
	}
	.align-right {
		margin-left: 10%;
		-moz-text-align-last: center; /* For Firefox prior 58.0 */
		text-align-last: center;
	}
	.titleXL,
	.titleL,
	.titleM,
	.titleS {
		text-align: center;
	}
	.titleXL {
		font-size: 12rem !important;
	}
	.titleL {
		font-size: 5rem !important;
	}

	.titleM {
		font-size: 2.8rem !important;
	}
}

/* Medium devices (tablets, 768px and up) */
@media (max-width: 768px) {
}

/* Large devices (desktops, 992px and up) */
@media (max-width: 992px) {
}

/* X-Large devices (large desktops, 1200px and up) */
@media (max-width: 1200px) {
}

/* XX-Large devices (larger desktops, 1400px and up) */
@media (max-width: 1400px) {
}

